# alglib-cpp-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: sources.cmake
tests/: CMakeLists.txt
